almost finished the third page I still have to fix the little overflowing on the last page

--- a/assets/stylesheets/product.scss
+++ b/assets/stylesheets/product.scss
@@ -301,7 +301,7 @@ main {
 .shoe-4 {
     border: 2px solid white;
     width: 100%;
-    height: 100%;
+    height: 25%;
     object-fit: cover;
 }
 
